// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfoNotificationDetailSentTable /> other cases should render snapshot for invalid data 1`] = `
.emotion-0 {
  max-width: 690px;
  min-width: 360px;
  border-spacing: 0;
}

.emotion-1 {
  display: table-row-group;
}

.emotion-2 {
  display: table-row;
}

.emotion-2:first-of-type>* {
  padding-top: 0px;
}

.emotion-3 {
  display: table-cell;
  padding-top: 16px;
  text-align: right;
  white-space: nowrap;
}

.emotion-4 {
  display: table-cell;
  padding-top: 16px;
}

.emotion-5 {
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 24px;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  margin-left: 8px;
}

.emotion-5.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-5 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-5 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-5 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-5 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-5 .MuiChip-icon {
  color: #616161;
  margin-left: 4px;
  margin-right: -4px;
  font-size: 18px;
}

.emotion-5 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 16px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-5 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-6 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    data-testid="InfoNotificationDetailSentTable__container"
  >
    <div
      class="MuiBox-root emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.courses:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.grades:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.individualRecipient:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        />
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.userType:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InfoNotificationDetailSentTable /> other cases should render snapshot for with all courseList and list gradeList  1`] = `
.emotion-0 {
  max-width: 690px;
  min-width: 360px;
  border-spacing: 0;
}

.emotion-1 {
  display: table-row-group;
}

.emotion-2 {
  display: table-row;
}

.emotion-2:first-of-type>* {
  padding-top: 0px;
}

.emotion-3 {
  display: table-cell;
  padding-top: 16px;
  text-align: right;
  white-space: nowrap;
}

.emotion-4 {
  display: table-cell;
  padding-top: 16px;
}

.emotion-5 {
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 24px;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  margin-left: 8px;
}

.emotion-5.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-5 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-5 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-5 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-5 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-5 .MuiChip-icon {
  color: #616161;
  margin-left: 4px;
  margin-right: -4px;
  font-size: 18px;
}

.emotion-5 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 16px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-5 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-6 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    data-testid="InfoNotificationDetailSentTable__container"
  >
    <div
      class="MuiBox-root emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.courses:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              resources.notifications.targetGroupSelect.NOTIFICATION_TARGET_GROUP_SELECT_ALL
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.grades:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              resources.choices.grades.9
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.individualRecipient:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        />
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.userType:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<InfoNotificationDetailSentTable /> should render snapshot 1`] = `
.emotion-0 {
  max-width: 690px;
  min-width: 360px;
  border-spacing: 0;
}

.emotion-1 {
  display: table-row-group;
}

.emotion-2 {
  display: table-row;
}

.emotion-2:first-of-type>* {
  padding-top: 0px;
}

.emotion-3 {
  display: table-cell;
  padding-top: 16px;
  text-align: right;
  white-space: nowrap;
}

.emotion-4 {
  display: table-cell;
  padding-top: 16px;
}

.emotion-5 {
  max-width: 100%;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 24px;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgba(0, 0, 0, 0.08);
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  margin-left: 8px;
}

.emotion-5.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-5 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-5 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #1565c0;
}

.emotion-5 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #7b1fa2;
}

.emotion-5 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-5 .MuiChip-icon {
  color: #616161;
  margin-left: 4px;
  margin-right: -4px;
  font-size: 18px;
}

.emotion-5 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(0, 0, 0, 0.26);
  font-size: 16px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-5 .MuiChip-deleteIcon:hover {
  color: rgba(0, 0, 0, 0.4);
}

.emotion-6 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    data-testid="InfoNotificationDetailSentTable__container"
  >
    <div
      class="MuiBox-root emotion-1"
    >
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.courses:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              Course 1
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              Course 2
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.grades:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              resources.notifications.targetGroupSelect.NOTIFICATION_TARGET_GROUP_SELECT_ALL
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.individualRecipient:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              Student A
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              Student B
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="InfoNotificationDetailSentTableRow__container"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <span>
            resources.notifications.label.userType:
          </span>
        </div>
        <div
          class="MuiBox-root emotion-4"
        >
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              resources.choices.user_group.USER_GROUP_STUDENT
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-5"
            data-testid="ChipBase_item"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall emotion-6"
            >
              resources.choices.user_group.USER_GROUP_PARENT
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
